plots and metadata fixes

--- a/merge.ipynb
+++ b/merge.ipynb
@@ -31,56 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "49b40895-4583-4eaa-b27e-cf63d7ec8031",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[22mNew names:\n",
-      "\u001b[36m•\u001b[39m `` -> `...1`\n",
-      "\u001b[1mRows: \u001b[22m\u001b[34m206\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m60\u001b[39m\n",
-      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\u001b[39m\n",
-      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
-      "\u001b[31mchr\u001b[39m (30): species_group, sample, species.x, NoOut, Section_Vlook, Section_ed...\n",
-      "\u001b[32mdbl\u001b[39m (28): ...1, latitude, longitude, jit_latitude, jit_longitude, elevation....\n",
-      "\u001b[33mlgl\u001b[39m  (2): population, seed\n",
-      "\n",
-      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
-      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tibble [189 × 8] (S3: tbl_df/tbl/data.frame)\n",
-      " $ library    : chr [1:189] \"DDA123e\" \"DDA123j\" \"DDA129\" \"DDA123b\" ...\n",
-      " $ sample     : chr [1:189] \"DDA123e\" \"DDA123j\" \"DDA129\" \"DDA123b\" ...\n",
-      " $ species    : chr [1:189] \"Eucalyptus canobolensis\" \"Eucalyptus canobolensis\" \"Eucalyptus canobolensis\" \"Eucalyptus canobolensis\" ...\n",
-      " $ latitude   : num [1:189] -33.4 -33.4 -33.3 -33.4 -33.4 ...\n",
-      " $ longitude  : num [1:189] 149 149 149 149 149 ...\n",
-      " $ location   : chr [1:189] \"c. 350m west from Mt Towac track, Mt Canobolas.\" \"c. 350m west from Mt Towac track, Mt Canobolas.\" \"Junction of Fern gully road, Devils hole fire trail and Summit road. Mt Canobolas.\" \"c. 350m west from Mt Towac track, Mt Canobolas.\" ...\n",
-      " $ notes      : chr [1:189] NA NA NA NA ...\n",
-      " $ meta_source: chr [1:189] \"neweng\" \"neweng\" \"neweng\" \"neweng\" ...\n"
-     ]
-    }
-   ],
-   "source": [
-    "neweng = read_csv(\"input/Maid_meta_bio_tags.csv\") %>%\n",
-    "    janitor::clean_names() %>%\n",
-    "    filter(is.na(no_out)) %>%\n",
-    "    transmute(\n",
-    "        library=sample, sample, species=species_x, latitude, longitude, location, notes,\n",
-    "        meta_source=\"neweng\",\n",
-    "    )\n",
-    "str(neweng)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "df3c5e8f-a881-43b9-b3e4-e9ea9d24b03d",
    "metadata": {},
    "outputs": [
@@ -109,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c5439582-40b2-48d8-811d-13289451f277",
    "metadata": {},
    "outputs": [
@@ -155,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "32782219-a825-4dd9-92b2-4f1c976ed6a0",
    "metadata": {},
    "outputs": [],
@@ -190,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "98348c20-5b3b-4674-ab4b-91fefa5a7e17",
    "metadata": {},
    "outputs": [
@@ -228,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "05c1a76b-cc58-43d7-8f8f-b65e55989821",
    "metadata": {},
    "outputs": [
@@ -253,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "720c683b-4ffc-4f98-8e82-36d56ac7abcf",
    "metadata": {},
    "outputs": [
@@ -288,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4b9db125-e84b-4cad-857a-37501863d3ef",
    "metadata": {},
    "outputs": [],
@@ -306,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "25102e8c-b563-4d8d-93da-9d9f2ba0d97c",
    "metadata": {
     "tags": []
@@ -319,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "107cd6a6-b209-42ea-ac07-de5944bd6102",
    "metadata": {
     "tags": []
@@ -425,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "13551cd2-2fd6-40c2-9fea-a9a50af37b22",
    "metadata": {},
    "outputs": [
@@ -464,7 +414,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "901cd81b-b28a-4242-9449-1de735395575",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[22mNew names:\n",
+      "\u001b[36m•\u001b[39m `` -> `...1`\n",
+      "\u001b[1mRows: \u001b[22m\u001b[34m206\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m60\u001b[39m\n",
+      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\u001b[39m\n",
+      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
+      "\u001b[31mchr\u001b[39m (30): species_group, sample, species.x, NoOut, Section_Vlook, Section_ed...\n",
+      "\u001b[32mdbl\u001b[39m (28): ...1, latitude, longitude, jit_latitude, jit_longitude, elevation....\n",
+      "\u001b[33mlgl\u001b[39m  (2): population, seed\n",
+      "\n",
+      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
+      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
+     ]
+    }
+   ],
+   "source": [
+    "neweng = read_csv(\"input/Maid_meta_bio_tags.csv\") %>%\n",
+    "    janitor::clean_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
+   "id": "4e09a6bd-b2a6-43d5-a623-e67095ed37b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tibble [189 × 9] (S3: tbl_df/tbl/data.frame)\n",
+      " $ library    : chr [1:189] \"DDA123e\" \"DDA123j\" \"DDA129\" \"DDA123b\" ...\n",
+      " $ sample     : chr [1:189] \"DDA123e\" \"DDA123j\" \"DDA129\" \"DDA123b\" ...\n",
+      " $ species    : chr [1:189] \"Eucalyptus canobolensis\" \"Eucalyptus canobolensis\" \"Eucalyptus canobolensis\" \"Eucalyptus canobolensis\" ...\n",
+      " $ latitude   : num [1:189] -33.4 -33.4 -33.3 -33.4 -33.4 ...\n",
+      " $ longitude  : num [1:189] 149 149 149 149 149 ...\n",
+      " $ location   : chr [1:189] \"c. 350m west from Mt Towac track, Mt Canobolas.\" \"c. 350m west from Mt Towac track, Mt Canobolas.\" \"Junction of Fern gully road, Devils hole fire trail and Summit road. Mt Canobolas.\" \"c. 350m west from Mt Towac track, Mt Canobolas.\" ...\n",
+      " $ notes      : chr [1:189] NA NA NA NA ...\n",
+      " $ date       : Date[1:189], format: \"2019-11-03\" \"2019-11-03\" ...\n",
+      " $ meta_source: chr [1:189] \"neweng\" \"neweng\" \"neweng\" \"neweng\" ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "neweng = neweng %>%\n",
+    "    filter(is.na(no_out)) %>%\n",
+    "    transmute(\n",
+    "        library=sample,  sample, species=species_x, latitude, longitude, location, notes, date=lubridate::as_date(lubridate::dmy_hm(parsed_date)),\n",
+    "        meta_source=\"neweng\", \n",
+    "    )\n",
+    "str(neweng)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "4a2ab7e2-0699-4c0f-9eb6-923a78f367cc",
    "metadata": {},
    "outputs": [],
@@ -475,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "2b031881-070a-4c0d-ba03-a83dcd1dcf0f",
    "metadata": {},
    "outputs": [
@@ -517,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "84fe4bd2-e185-48b8-a6c5-c07812929e88",
    "metadata": {},
    "outputs": [],
@@ -538,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "227421d8-711e-4837-a339-a4a47cdbc891",
    "metadata": {},
    "outputs": [
@@ -560,7 +572,14 @@
     "all_eucs =  bind_rows(dp15_pre, dieback_pre, neweng) %>%\n",
     "    mutate_if(is.character, utf8::utf8_encode) %>%\n",
     "    mutate(\n",
-    "        \n",
+    "        library=case_when(\n",
+    "            is.na(library) ~ sample,\n",
+    "            T ~ library,\n",
+    "        ), \n",
+    "        sample=case_when(\n",
+    "            is.na(sample) ~ library,\n",
+    "            T ~ sample,\n",
+    "        ), \n",
     "        parsed_date = case_when(\n",
     "            !is.na(as.numeric(date)) ~ as.Date(as.numeric(date), origin = \"1899-12-30\"),\n",
     "            grepl(\"\\\\d{2}-(JAN|FEB|MAR|APR|MAY|JUN|JUL|AUG|SEP|OCT|NOV|DEC)-\\\\d+\", date, perl=T) ~ lubridate::dmy(sub(\" .+\", \"\", date)),\n",
@@ -582,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "93b5d0c2-7a51-4698-8924-16f3ec3b012f",
    "metadata": {},
    "outputs": [],
@@ -600,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "03a816cc-c19c-4b20-8247-3f05173327bf",
    "metadata": {},
    "outputs": [
@@ -659,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "id": "fd9695ac-a6bc-4a2d-a612-7c78c9d7ba25",
    "metadata": {},
    "outputs": [],
@@ -668,22 +687,13 @@
     "fqs = tibble(file=fqs) %>%\n",
     "    filter(\n",
     "        !grepl(\"/g/data/xe2/datasets/(NORMAN_WARTHMANN|ash_gap|iwyp60|uploads_public|gbs|dataupload)/\", file),\n",
-    "    )"
+    "    )\n",
+    "#kview(fqs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "fbe82b71-818e-4361-813d-665826cb8d0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kview(fqs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "755f5e2f-7cfb-4daf-bd36-d8484c5acacb",
    "metadata": {},
    "outputs": [],
@@ -703,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "972d4888-c169-4dd7-b8de-a26a08ca636d",
    "metadata": {},
    "outputs": [],
@@ -723,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "ce1dccc7-4176-4801-bdb5-da9a1aef78fb",
    "metadata": {},
    "outputs": [],
@@ -742,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "id": "70688a9d-1aef-4353-81f9-e48ac38f2b89",
    "metadata": {},
    "outputs": [],
@@ -758,14 +768,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "id": "713d2765-e500-4ab4-ab3a-6ec835a5aec0",
    "metadata": {},
    "outputs": [],
    "source": [
     "fqs =  bind_rows(grp1, grp2, grp3, grp4) %>% \n",
     "    mutate(lanedir=paste0(gsub(\"/\", \"\", lanedir), \"_\", sub(\"_\", \"\", lane)) %>% gsub(\"^NA_|_NA$\", \"\", .))\n",
-    "write_tsv(fqs, \"fastq_files.tsv\", na=\"\")\n",
+    "#write_tsv(fqs, \"fastq_files.tsv\", na=\"\")\n",
     "fqw = fqs %>%\n",
     "    pivot_wider(names_from=\"read\", values_from=\"file\") %>%\n",
     "    select(-sid, -lane)"
@@ -773,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "id": "2309f3d3-d8a6-4cba-8865-089376f38857",
    "metadata": {},
    "outputs": [
@@ -792,16 +802,23 @@
    "source": [
     "all_wide = all_eucs %>%\n",
     "    select(-run, -include, -errors) %>%\n",
-    "    unique() %>% \n",
+    "    distinct() %>% \n",
     "    full_join(., fqw, by=\"library\") %>%\n",
     "    filter(\n",
     "        !(lanedir == \"2019-09-24_ahrens-rymer-marri-nextseq-test-flowcell_\" & is.na(read1) & is.na(read2) & !is.na(interleaved)),  # these correspond to merged files\n",
-    "    )\n"
+    "    ) %>%\n",
+    "    mutate(\n",
+    "        project=case_when(\n",
+    "            !is.na(project) ~ project,\n",
+    "            grepl(\"^CCA\", sample) ~ \"CCA\",\n",
+    "            grepl(\"^JJB|DDA\", sample) ~ \"NEng\",\n",
+    "        )\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "id": "0ca431c5-c083-471a-9d87-05bb96be038f",
    "metadata": {},
    "outputs": [],
@@ -811,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 32,
    "id": "d7704f4e-8404-4eaf-819a-82653b54544c",
    "metadata": {},
    "outputs": [],
@@ -824,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 33,
    "id": "ac570ab5-dacd-4ff7-98f3-9010a4c8ebdc",
    "metadata": {},
    "outputs": [],
