--- a/mash/mashdist.ipynb
+++ b/mash/mashdist.ipynb
@@ -15,7 +15,7 @@
       "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.4.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
       "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.1     \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
       "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "id": "cc93e0a1-14ab-4be7-a120-93d915766b4f",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
    "id": "a5ea3298-6ed7-462c-95aa-e7bfee24127e",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "id": "e3ec5ca2-434c-497e-a627-cd93e905956f",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 7,
    "id": "a3619017-58a4-462a-8b30-fd382e23ef81",
    "metadata": {},
    "outputs": [],
@@ -179,6 +179,73 @@
     "        samp2 = sub(\"tmp/(.+).fastq.gz\", \"\\\\1\", fq2),\n",
     "        dist=dist,\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f0cc850d-dc0b-4602-bd0e-79ecc941426e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fdmat = bind_rows(fdist, rename(fdist, samp2=samp1, samp1=samp2)) %>%\n",
+    "        pivot_wider(names_from = \"samp2\", values_from = \"dist\") %>%\n",
+    "        column_to_rownames(\"samp1\") %>%\n",
+    "        as.matrix()\n",
+    "fdmat[is.na(fdmat)] = 0\n",
+    "fdmat = fdmat[colnames(fdmat),]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cf0906c7-6605-4dc1-8c5b-e0e7485c6a84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write.csv(fdmat, \"full-distance-matrix-square.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a2675100-90ed-4983-a7f7-e137f01db9a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " num [1:1287, 1:1287] 0 0.1448 0.0567 0.0965 0.0623 ...\n",
+      " - attr(*, \"dimnames\")=List of 2\n",
+      "  ..$ : chr [1:1287] \"Eucalyptus_viminalis_Tasmanian_Herbarium\" \"NCT\" \"NCT_1\" \"NCT_3\" ...\n",
+      "  ..$ : chr [1:1287] \"Eucalyptus_viminalis_Tasmanian_Herbarium\" \"NCT\" \"NCT_1\" \"NCT_3\" ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "str(fdmat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7d1899f1-919c-4a3b-9661-befdc4f49d3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tibble [827,541 × 3] (S3: tbl_df/tbl/data.frame)\n",
+      " $ samp1: chr [1:827541] \"NCT\" \"NCT_1\" \"NCT_1\" \"NCT_3\" ...\n",
+      " $ samp2: chr [1:827541] \"Eucalyptus_viminalis_Tasmanian_Herbarium\" \"Eucalyptus_viminalis_Tasmanian_Herbarium\" \"NCT\" \"Eucalyptus_viminalis_Tasmanian_Herbarium\" ...\n",
+      " $ dist : num [1:827541] 0.1448 0.0567 0.124 0.0965 0.1131 ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "str(fdist)"
    ]
   },
   {
