--- a/yieldcalc.ipynb
+++ b/yieldcalc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e62820a4-20b4-4671-9474-05cd4e819d8f",
    "metadata": {},
    "outputs": [
@@ -15,7 +15,7 @@
       "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.4.2     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
       "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.2     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.1     \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
       "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "ae9e6964-e4c0-42c8-bd9c-e42d82745e9a",
    "metadata": {},
    "outputs": [],
@@ -46,10 +46,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "416ae2af-02ea-4cb9-9892-25d09737299d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in system(sprintf(\"libreoffice --calc %s\", fn)):\n",
+      "“error in running command”\n"
+     ]
+    }
+   ],
    "source": [
     "meta %>%\n",
     "    count(species_other) %>%\n",
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "9cd54e96-a5f1-4e6c-b151-81a816c9ba0f",
    "metadata": {},
    "outputs": [],
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "1c4787fe-b1c3-48db-bf53-4b4d35ce4627",
    "metadata": {},
    "outputs": [
@@ -127,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "f2ed7c0b-5b32-4e0d-b6df-597bd2c52530",
    "metadata": {},
    "outputs": [],
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "3e317041-6d7b-468c-9f51-0ce8d7391f56",
    "metadata": {},
    "outputs": [
@@ -175,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "da1801ad-fd5d-4975-b481-e557cfc6d739",
    "metadata": {},
    "outputs": [
@@ -204,6 +213,62 @@
     "        dntax %>% select(Binomial, Section),\n",
     "        by=join_by(species==Binomial)\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6f844633-1f81-4dea-93ab-d4e505c0cec0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[22m`summarise()` has grouped output by 'sample', 'seqproject'. You can override using the `.groups` argument.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\n",
+       "|sample |seqproject                |fqbase                                                     |         mbp|\n",
+       "|:------|:-------------------------|:----------------------------------------------------------|-----------:|\n",
+       "|NCT    |2021-08_ac-colin_brf-eucs |NCT_S97_L002_001.fastq.gz                                  |    43.71933|\n",
+       "|NCT    |2021_S4_Bothwell          |NCT_DKDL202006107-1a-AK9781-AK32_HJVFCDSXY_L1_1.fq.gz      |    18.22260|\n",
+       "|NCT    |2021_S4_Bothwell          |NCT_DKDL202006107-1a-AK9781-AK32_HJVFCDSXY_L1_2.fq.gz      |    18.22260|\n",
+       "|NCT    |euc_dieback_illumina_2023 |NCT_S1_001.fastq.gz                                        |    50.05650|\n",
+       "|NCT_1  |2021-08_ac-colin_brf-eucs |NCT_1_S1_L001_001.fastq.gz                                 |    72.95656|\n",
+       "|NCT_1  |2021_S4_Bothwell          |NCT_1_DKDL202006109-1a-AK9804-AK33784_HJVFCDSXY_L1_1.fq.gz |     0.05100|\n",
+       "|NCT_1  |2021_S4_Bothwell          |NCT_1_DKDL202006109-1a-AK9804-AK33784_HJVFCDSXY_L1_2.fq.gz |     0.05100|\n",
+       "|NCT_1  |euc_dieback_illumina_2023 |NCT_1_S106_001.fastq.gz                                    |  1364.86363|\n",
+       "|NCT_10 |euc_dieback_illumina_2023 |NCT_10_S371_001.fastq.gz                                   |    18.29878|\n",
+       "|NCT_2  |euc_dieback_illumina_2023 |NCT_2_S211_001.fastq.gz                                    |   345.54266|\n",
+       "|NCT_3  |2021_S4_Bothwell          |NCT_3_DKDL202006108-1a-AK9792-AK33783_HJVFCDSXY_L1_1.fq.gz |     0.04260|\n",
+       "|NCT_3  |2021_S4_Bothwell          |NCT_3_DKDL202006108-1a-AK9792-AK33783_HJVFCDSXY_L1_2.fq.gz |     0.04260|\n",
+       "|NCT_3  |euc_dieback_illumina_2023 |NCT_3_S28_001.fastq.gz                                     |   389.08774|\n",
+       "|NCT_3  |euc_dieback_illumina_2023 |NCT_3_S380_001.fastq.gz                                    |    63.65858|\n",
+       "|NCT_4  |euc_dieback_illumina_2023 |NCT_4_S133_001.fastq.gz                                    |   378.01370|\n",
+       "|NCT_5  |euc_dieback_illumina_2023 |NCT_5_S238_001.fastq.gz                                    |    49.23717|\n",
+       "|NCT_6  |euc_dieback_illumina_2023 |NCT_6_S343_001.fastq.gz                                    |    41.84029|\n",
+       "|NCT_7  |euc_dieback_illumina_2023 |NCT_7_S64_001.fastq.gz                                     |    47.11351|\n",
+       "|NCT_8  |euc_dieback_illumina_2023 |NCT_8_S161_001.fastq.gz                                    |   455.02914|\n",
+       "|NCT_9  |euc_dieback_illumina_2023 |NCT_9_S266_001.fastq.gz                                    | 11240.83713|"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "metafq %>%\n",
+    "    filter(grepl(\"NCT\", sample), !is.na(fqfile)) %>%\n",
+    "    select( sample, seqproject, read, fqfile,n_bases)   %>%\n",
+    "    mutate(fqbase=fqfile %>% basename() %>% sub(\"_R[12]_\", \"_\", .), mbp = n_bases/1e6) %>%\n",
+    "    group_by(sample, seqproject, fqbase) %>%\n",
+    "    summarise(mbp=sum(mbp)) %>%\n",
+    "    knitr::kable()"
    ]
   },
   {
