--- a/yieldcalc.ipynb
+++ b/yieldcalc.ipynb
@@ -136,6 +136,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "1ba3563b-2321-4a42-b123-4e9833091454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_tsv(metafq, \"fqstat_with_metadata.tsv\", na=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "f2ed7c0b-5b32-4e0d-b6df-597bd2c52530",
    "metadata": {},
