remove broken symlinked AC files

--- a/merge.ipynb
+++ b/merge.ipynb
@@ -3,21 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e662d801-c3d4-463e-bdd3-274fee32d8c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "identical_or_na =function(x) {\n",
-    "    tb = unique(na.omit(x))\n",
-    "    if (length(tb) == 0) return(NA)\n",
-    "    if(length(tb)!=1) warning(paste(\"Duplicate values:\", paste(tb, collapse=\",\")))\n",
-    "    tb\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "b395aab0-00f4-495d-90da-06ecfed44722",
    "metadata": {},
    "outputs": [
@@ -46,10 +31,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "e662d801-c3d4-463e-bdd3-274fee32d8c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "identical_or_na =function(x) {\n",
+    "    tb = unique(na.omit(x))\n",
+    "    if (length(tb) == 0) return(NA)\n",
+    "    if(length(tb)!=1) warning(paste(\"Duplicate values:\", paste(tb, collapse=\",\")))\n",
+    "    tb\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "6f852f3a-0e8d-4fb3-9f49-6b1c8b33dfcd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 10,081\n",
+      "Columns: 5\n",
+      "$ fq    \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"rawdata/reads/2021-08_ACColin_A00548_0218_pool1_phyloGWAS_APF_g…\n",
+      "$ run   \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"2021-08_ACColin_A00548_0218_pool1_phyloGWAS_APF_gDNA\", \"2021-08…\n",
+      "$ fname \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"CCA0773_S38_L001\", \"CCA0804_rep1_S49_L001\", \"CCA0704_S63_L001\",…\n",
+      "$ sname \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"CCA0773\", \"CCA0804_rep1\", \"CCA0704\", \"CCA1598\", \"CCA1587\", \"CCA…\n",
+      "$ read  \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"read2_uri\", \"read2_uri\", \"read2_uri\", \"read2_uri\", \"read1_uri\",…\n"
+     ]
+    }
+   ],
    "source": [
     "allfq = tibble(fq=readLines(\"fofq.txt\")) %>%\n",
     "    mutate(\n",
@@ -69,12 +83,25 @@
     "            grepl(\"_R2(_001)?.fastq.gz\", fq) ~ \"read2_uri\",\n",
     "        ),\n",
     "    ) %>%\n",
-    "    filter(!grepl(\"^(NCT|[Bb]lank|neg)|_blank\", fname))"
+    "    filter(!grepl(\"^(NCT|[Bb]lank|neg)|_blank\", fname)) %>%\n",
+    "    glimpse()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "b41f85bb-e34e-40ab-b8d0-340e474d2594",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr =read_tsv(\"manual_corrections.csv\")\n",
+    "allfq = allfq %>%\n",
+    "    rows_update(corr, by = \"fname\", unmatched=\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "6e1d8557-2b61-4fc5-84a8-34f91585fc6f",
    "metadata": {},
    "outputs": [
@@ -84,7 +111,7 @@
      "text": [
       "Rows: 760\n",
       "Columns: 3\n",
-      "$ sample      \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"GOL0025_1D_1\", \"GOL0025_1D_1\", \"GOL0025_1D\", \"GOL0025_1D\"…\n",
+      "$ sample      \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"GOL0025_1D_1\", \"GOL0025_3W\", \"NSW0586_9D\", \"NSW0232_5D\", …\n",
       "$ species     \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Eucalptus melliodora\", \"Eucalptus melliodora\", \"Eucalptus…\n",
       "$ meta_source \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"hb_rhizo\", \"hb_rhizo\", \"hb_rhizo\", \"hb_rhizo\", \"hb_rhizo\"…\n"
      ]
@@ -99,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "df3c5e8f-a881-43b9-b3e4-e9ea9d24b03d",
    "metadata": {},
    "outputs": [
@@ -128,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "32782219-a825-4dd9-92b2-4f1c976ed6a0",
    "metadata": {},
    "outputs": [
@@ -168,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4e09a6bd-b2a6-43d5-a623-e67095ed37b2",
    "metadata": {},
    "outputs": [
@@ -210,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "720c683b-4ffc-4f98-8e82-36d56ac7abcf",
    "metadata": {},
    "outputs": [
@@ -253,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4b9db125-e84b-4cad-857a-37501863d3ef",
    "metadata": {},
    "outputs": [
@@ -296,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "84fe4bd2-e185-48b8-a6c5-c07812929e88",
    "metadata": {},
    "outputs": [
@@ -335,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f27502f8-abca-4797-b9ea-df7fb1dc25a5",
    "metadata": {},
    "outputs": [
@@ -382,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f9f9c32b-cbea-4963-8ae2-3ddd9c5cc843",
    "metadata": {},
    "outputs": [
@@ -425,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "227421d8-711e-4837-a339-a4a47cdbc891",
    "metadata": {},
    "outputs": [
@@ -469,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "93b5d0c2-7a51-4698-8924-16f3ec3b012f",
    "metadata": {},
    "outputs": [],
@@ -487,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "03a816cc-c19c-4b20-8247-3f05173327bf",
    "metadata": {},
    "outputs": [
@@ -538,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "5d153010-1ebf-4166-8841-5124026c3e73",
    "metadata": {},
    "outputs": [
@@ -579,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "b41f85bb-e34e-40ab-b8d0-340e474d2594",
+   "execution_count": 18,
+   "id": "0abacc28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "3f13f0ae-9340-419f-bf37-1f27f3dd8170",
    "metadata": {},
    "outputs": [],
@@ -603,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "5fcaca48-154d-45d4-b9b1-647c1fb645bc",
    "metadata": {},
    "outputs": [
@@ -652,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "6ca96529-f6a9-420c-a9cc-fda34677c7b3",
    "metadata": {},
    "outputs": [
@@ -660,7 +687,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rows: 10,553\n",
+      "Rows: 9,925\n",
       "Columns: 21\n",
       "$ sample      \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"AY_01\", \"AY_01\", \"AY_01\", \"AY_01\", \"AY_02\", \"AY_02\", \"AY_…\n",
       "$ species     \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA…\n",
@@ -681,8 +708,8 @@
       "$ has_meta    \u001b[3m\u001b[90m<lgl>\u001b[39m\u001b[23m TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE…\n",
       "$ fq          \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"rawdata/reads/2024_brf-euc-novaseq-x-flowcells/AY_01_S1_L…\n",
       "$ run         \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"2024_brf-euc-novaseq-x-flowcells\", \"2024_brf-euc-novaseq-…\n",
-      "$ fname       \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"AY_01_S1_L001\", \"AY_01_S1_L001\", \"AY_01_S1_L002\", \"AY_01_…\n",
-      "$ read        \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"read1_uri\", \"read2_uri\", \"read1_uri\", \"read2_uri\", \"read1…\n"
+      "$ fname       \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"AY_01_S1_L002\", \"AY_01_S1_L001\", \"AY_01_S1_L001\", \"AY_01_…\n",
+      "$ read        \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"read2_uri\", \"read1_uri\", \"read2_uri\", \"read1_uri\", \"read1…\n"
      ]
     }
    ],
@@ -694,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "a278f2e4-3215-42c8-b975-381cfeccd2f7",
    "metadata": {},
    "outputs": [],
@@ -704,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "7fe25fe2-c3b7-445b-adfb-ec050314102f",
    "metadata": {},
    "outputs": [
@@ -712,7 +739,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rows: 10,553\n",
+      "Rows: 9,925\n",
       "Columns: 21\n",
       "$ sample      \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"AY_01\", \"AY_01\", \"AY_01\", \"AY_01\", \"AY_02\", \"AY_02\", \"AY_…\n",
       "$ species     \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA…\n",
@@ -733,8 +760,8 @@
       "$ has_meta    \u001b[3m\u001b[90m<lgl>\u001b[39m\u001b[23m TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE, TRUE…\n",
       "$ fq          \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"rawdata/reads/2024_brf-euc-novaseq-x-flowcells/AY_01_S1_L…\n",
       "$ run         \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"2024_brf-euc-novaseq-x-flowcells\", \"2024_brf-euc-novaseq-…\n",
-      "$ fname       \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"AY_01_S1_L001\", \"AY_01_S1_L001\", \"AY_01_S1_L002\", \"AY_01_…\n",
-      "$ read        \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"read1_uri\", \"read2_uri\", \"read1_uri\", \"read2_uri\", \"read1…\n"
+      "$ fname       \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"AY_01_S1_L002\", \"AY_01_S1_L001\", \"AY_01_S1_L001\", \"AY_01_…\n",
+      "$ read        \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"read2_uri\", \"read1_uri\", \"read2_uri\", \"read1_uri\", \"read1…\n"
      ]
     }
    ],
@@ -763,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "4b8a046a-0f7e-4d9c-bed1-ecc241e715e1",
    "metadata": {},
    "outputs": [],
@@ -774,45 +801,6 @@
     "    unique() %>%\n",
     "    sort() %>%\n",
     "    writeLines(\"melsider.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "0fec3e1f-7ce6-4a82-93dd-d0b9a85ff6aa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in file(con, \"r\"):\n",
-      "“cannot open file 'samplesets/HBDecra.txt': No such file or directory”\n"
-     ]
-    },
-    {
-     "ename": "ERROR",
-     "evalue": "Error in file(con, \"r\"): cannot open the connection\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in file(con, \"r\"): cannot open the connection\nTraceback:\n",
-      "1. readLines(\"samplesets/HBDecra.txt\")",
-      "2. file(con, \"r\")"
-     ]
-    }
-   ],
-   "source": [
-    "hbdecra = readLines(\"samplesets/HBDecra.txt\") "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5a63e5a-778a-4ea0-b3ef-67c2ce52b0d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hbdecra[(hbdecra%in%rl2s$sample)] %>% writeLines(\"samplesets/HBDecra_testing.txt\")"
    ]
   },
   {
